--- a/final_project/tables/model_results.tex
+++ b/final_project/tables/model_results.tex
@@ -2,8 +2,15 @@
  & \multicolumn{4}{r}{caught_proportion} & \multicolumn{4}{r}{eigen_proportion} & unfinished \\
  & 0.250000 & 0.500000 & 0.750000 & 1.000000 & 0.250000 & 0.500000 & 0.750000 & 1.000000 &  \\
 strategy &  &  &  &  &  &  &  &  &  \\
-greedy_eigenvector & 81 & 159 & 261 & 375 & 63 & 101 & 149 & 375 & 1.350000 \\
-greedy_random & 80 & 157 & 260 & 374 & 61 & 101 & 154 & 374 & 1.410000 \\
-least_central & 100 & 194 & 292 & 382 & 91 & 156 & 243 & 382 & 2.890000 \\
-naive_random & 113 & 210 & 307 & 390 & 92 & 160 & 241 & 390 & 3.560000 \\
+balanced_diameter_1 & 65 & 126 & 201 & 292 & 48 & 81 & 127 & 292 & 0.000000 \\
+balanced_diameter_3 & 62 & 121 & 193 & 281 & 45 & 79 & 129 & 281 & 0.000000 \\
+balanced_diameter_5 & 65 & 123 & 193 & 280 & 48 & 82 & 132 & 280 & 0.000000 \\
+balanced_diameter_7 & 74 & 133 & 202 & 287 & 61 & 97 & 146 & 287 & 0.000000 \\
+balanced_diameter_9 & 78 & 143 & 214 & 295 & 62 & 109 & 170 & 295 & 0.000000 \\
+greedy_diameter & 68 & 133 & 211 & 310 & 55 & 95 & 142 & 310 & 0.000000 \\
+greedy_eigenvector & 79 & 156 & 256 & 375 & 63 & 101 & 148 & 375 & 0.000000 \\
+greedy_random & 79 & 155 & 254 & 374 & 60 & 100 & 152 & 374 & 0.000000 \\
+least_central & 96 & 186 & 279 & 382 & 89 & 151 & 233 & 382 & 0.000000 \\
+max_diameter & 79 & 147 & 226 & 311 & 64 & 108 & 174 & 311 & 0.000000 \\
+naive_random & 107 & 199 & 290 & 390 & 88 & 153 & 229 & 390 & 0.000000 \\
 \end{tabular}
